--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -12,7 +12,7 @@
     padding: 0;
 }
 .banner__container{
-    background-image: url("../../public//assets/banner-1.jpg");
+    background-image: url("https://ik.imagekit.io/cooldunlin185005/assets/banner-1_qDP9HJ0gw.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1655812489964");
     background-repeat: no-repeat;
     background-size: cover;
     width: 99vw;
@@ -56,7 +56,7 @@
     font-size: 2vw;
 }
 .homepage__banner__2{
-    background-image: url("../../public//assets/banner-1.jpg");
+    background-image: url("https://ik.imagekit.io/cooldunlin185005/assets/banner-1_qDP9HJ0gw.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1655812489964");
     height: 60vh;
     background-repeat: no-repeat;
     background-size: cover;
